@@ -1,6 +1,13 @@
 # ChangeLog for x11-terms/kterm
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/kterm/ChangeLog,v 1.25 2008/02/06 22:05:37 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/kterm/ChangeLog,v 1.26 2008/06/20 18:01:50 matsuu Exp $
+
+*kterm-6.2.0-r5 (20 Jun 2008)
+
+  20 Jun 2008; MATSUU Takuto <matsuu@gentoo.org> -kterm-6.2.0-r2.ebuild,
+  -kterm-6.2.0-r3.ebuild, kterm-6.2.0-r4.ebuild, +kterm-6.2.0-r5.ebuild:
+  Fixed dependency, bug #227563. Removed bindnow-flags, bug #227031.
+  Removed old versions.
 
   06 Feb 2008; Fabian Groffen <grobian@gentoo.org> kterm-6.2.0-r2.ebuild:
   Dropped ppc-macos keyword, see you in prefix
